Sun,  3 Jun 2007 15:41:30 +0200 <thp@perli.net>
        * src/gpodder/console.py: Fix a problem with URLs containing the "%"
          character and Python format strings; thanks go out to Thomas 
          Matthijs <axxo gentoo.org> for reporting this bug and help fixing it

Fri, 25 May 2007 12:04:20 +0200 <thp@perli.net>
        * src/gpodder/gpodder.py: Update the feed cache after everything
          else has been changed, so that we now really have a working 
          update-on-startup option; thanks to Götz Waschk and Stephan Buys
          for reporting and helping to fix this long-standing problem :)

Thu, 24 May 2007 16:45:43 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Mark strings as translatable
          that appear in the GUI (bugfix ;)
        * bin/gpodder: We're in development again ("+svn" version)

Wed, 23 May 2007 14:56:56 +0200 <thp@perli.net>
        * README: ** gPodder 0.9.2 released **
        * bin/gpodder: Updated version + release date for 0.9.2
        * doc/man/gpodder.1: Updated manpage for gPodder 0.9.2
        * README: Updated README file for gPodder 0.9.2
        * TODO: Updated TODO list for 0.9.2 release

Tue, 22 May 2007 22:53:13 +0200 <thp@perli.net>
        * data/messages.pot: Updated messages.pot from source code
        * data/po/de.po: Updated German translation
        * bin/gpodder: pushed version + release date
        * TODO: updated TODO list

Mon, 21 May 2007 11:50:56 +0200 <thp@perli.net>
        * src/gpodder/libgpodder.py: Add escape_html() function to escape 
          ampersands, greater-than and less-than characters
        * src/gpodder/gpodder.py: Use escape_html() to fix a bug in
          the episode info dialog window when the title of the episode 
          contains one of the special HTML characters
        * bin/gpodder: pushed version + release date

Mon, 14 May 2007 21:11:32 +0200 <thp@perli.net>
        * TODO: Updated TODO list

Mon,  7 May 2007 22:11:37 +0200 <thp@perli.net>